corrected table layout issues

--- a/application/css/layout.css
+++ b/application/css/layout.css
@@ -34,7 +34,6 @@ h2 {
 	font-family: "Lato", sans-serif;
 	color:#5655A1;
 	border-bottom:2px solid #DECE81;
-	text-align:right;
 	font-size:1.3em;
 }
 
