--- a/application/css/projectSearch.css
+++ b/application/css/projectSearch.css
@@ -3,7 +3,7 @@ http://www.dailycoding.com/Posts/howtoset100tableheightinhtml.aspx 100% table he
 http://stackoverflow.com/questions/799981/document-ready-equivalent-without-jquery
 http://www.stunicholls.com/menu/jquery-concertina-6.html#url didn't see code but saw app in motion
 http://forum.jquery.com/topic/jquery-jquery-accordion-how-can-panels-stay-open
-http://docs.jquery.com/UI/Accordion#What_this_isn.27t</a>
+http://docs.jquery.com/UI/Accordion#What_this_isn.27t</a> 
 http://stackoverflow.com/questions/14326259/using-slidetoggle-to-pull-a-hidden-div-up-from-the-bottom
 http://stackoverflow.com/questions/7219007/html-no-line-break inline-block from here i think
 http://jquery-ui.googlecode.com/svn/tags/1.6rc5/tests/static/icons.html
@@ -16,7 +16,15 @@ html, body {
 }
 #mainTable { 
     width: 100%;
-    height:100%;
+    height: 100%;
+}
+#sidebar {
+    width: 20%;
+	height: 100%;
+	padding: .4em;
+    border:1px solid #DDDDDD;
+	border-radius:5px;
+	background-color:white;
 }
 #results { 
     width: 80%;
@@ -27,8 +35,8 @@ html, body {
 .result { 
     width: 100%;
     height: 100px;
-	border-left:1px solid darkblue;
-	border-bottom:1px solid darkblue;
+	border-bottom:1px solid #DECE81;
+	margin-bottom:2px;
 }
 #filterCollection  {
     height: 100%;   
@@ -40,33 +48,23 @@ margin-bottom: 1px;
 padding-right: 5px;
 cursor: pointer;
 height: 50px;
-
+text-transform:capitalize;
 }
 .filter {
 cursor: pointer;
 padding: 5px 10px;
-visibility:hidden;
+visibility: hidden;
 }
-p { padding: 5px 0; }
 
 .ui-icon.ui-icon-plusthick{
 	display:inline-block;
 }
-#sidebar {
-	/*float:left;*/
-    width: 20%;
-    height: 100%;
-	padding: .4em;
-    border:1px solid #DDDDDD;
-	border-radius:5px;
-	background-color:white;
-}
-/*
-#searchBox{
-	column-span:2;
-	text-align:right;
+
+.result:nth-of-type(odd) {
+	background-color:#E6E6E6;
 }
 
-.results:nth-of-type(odd) {
-	background-color:#E6E6E6;
+/*#searchBox{
+	column-span:2;
+	text-align:right;
 }*/
